fix: reduce section gaps & title margin-bottom

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
 }
 
 .homeSection {
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   scroll-margin: 6rem;
 }
 
@@ -14,7 +14,7 @@
   font-weight: 700;
   text-transform: uppercase;
   font-size: 40px;
-  margin-bottom: 1.75rem;
+  margin-bottom: 1.125rem;
 }
 
 .holderColor {
